fix: update docs and solve the bug 15
